--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
-    <link rel="shortcut icon" type="image/png" href="assets/icons/logobig.png">
+    <link rel="shortcut icon" type="image/png" href="assets\icons\logobig.png">
     <link rel="stylesheet" href="style.css">
     <title>Klara Fleischmann • Web Development</title>
   </head>
