update landing page

--- a/index.html
+++ b/index.html
@@ -22,21 +22,21 @@
                   Klara Fleischmann
                 </p>
                 <p class="jobtitle">
-                  • Frontend Web Developer •
+                  • Software Engineer •
                 </p>
 
               </div>
             </div>
 
             <div class="social">
-              <a href="https://codepen.io/miffili/" class="codepen" title="CodePen">
-                <img src="assets/icons/codepen.png" alt="CodePen">
-              </a>
               <a href="https://twitter.com/KlaraMiffili" class="twitter" title="Twitter">
                 <img src="assets/icons/twitter.png" alt="Twitter">
               </a>
               <a href="https://github.com/Miffili" class="github" title="GitHub">
                 <img src="assets/icons/github.png" alt="GitHub">
+              </a>
+              <a href="https://codepen.io/miffili/" class="codepen" title="CodePen">
+                <img src="assets/icons/codepen.png" alt="CodePen">
               </a>
               <a href="https://www.xing.com/profile/Klara_Fleischmann/portfolio" class="xing" title="Xing [GER]">
                 <img src="assets/icons/xing.png" alt="Xing [GER]">
